--- a/package.json
+++ b/package.json
@@ -20,5 +20,8 @@
     "hardhat": "^3.0.17",
     "typescript": "~5.8.3",
     "viem": "^2.41.2"
+  },
+  "dependencies": {
+    "@openzeppelin/contracts": "^5.4.0"
   }
 }
